@@ -1,3 +1,8 @@
+2003-05-30  Frank Ch. Eigler  <fche@redhat.com>
+
+	* tree-mudflap.c (mudflap_c_function, enqueue_constant, enqueue_decl):
+	Rework dumping logic.
+
 2003-05-27  Jason Merrill  <jason@redhat.com>
 
 	* tree-ssa.c (avail_expr_hash): Simplify by using iterative_hash_expr
